force-app/main/default/objects/Logger_Setting__mdt/Logger_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Contains all settings for the logger-system including Sentry-Api-Key</description>
    <label>Logger Setting</label>
    <pluralLabel>Logger Setting</pluralLabel>
</CustomObject>