force-app/main/default/objects/Logger_Setting__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable/disable Sentry Connection</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>