force-app/main/default/objects/Logger_Setting__mdt/fields/Sentry_Key__c.field-meta.xml
<CustomField>
    <fullName>Sentry_Key__c</fullName>
    <description>Auth Key of Sentry</description>
    <label>Sentry Key</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>