force-app/main/default/objects/Logger_Setting__mdt/fields/Sentry_Url__c.field-meta.xml
<CustomField>
    <fullName>Sentry_Url__c</fullName>
    <description>Contains the sentry auth url</description>
    <inlineHelpText>Url</inlineHelpText>
    <label>Sentry Api Url</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>